--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://i.imgur.com/w3Hf9ei.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/282758/1693243588/images/4.mp4" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
