--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Noochez sorrpresas</title>
+<title>Rich at Night</title>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger69", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
 
-<meta content='https://imgur.com/usURuQn.png' property='og:image'/>
+<meta content='https://i.postimg.cc/ZRn0hMsp/Screenshot-7.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -62,7 +62,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://i.imgur.com/w3Hf9ei.mp4" type="video/mp4">
+<source src="https://cdn-dimi.akamaized.net/landings/282758/1693243588/images/4.mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
